--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 			<div style="margin-left: 400px;" class="col-lg-6" id="app" />
 		</div>
 	</div>
-	<script src="public/bundle.js"></script>
+	<script src="bundle.js"></script>
 </body>
 </html>
